submissions/ff35f580c8fc4c34b87a1da1a51691b8/result.txt
Compile Error:/usr/src/main.cpp:1:1: error: 'rrgwfws' does not name a type
    1 | rrgwfws
      | ^~~~~~~
